--- a/styles.css
+++ b/styles.css
@@ -154,8 +154,8 @@ html, body {
     padding: 0;
     width: 100px;
     height: 100px;
-    padding-left: 1.5%;
-    padding-top: .5%;
+    padding-left: 10px;
+    padding-top: 7px;
 
 }
 
